<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="query"
        android:title="@string/settings_query_title"
        android:summary="@string/settings_query_summary"
        android:defaultValue="nature wallpaper"
        android:inputType="text"
        app:iconSpaceReserved="false"/>

    <SwitchPreference
        android:key="geolocated"
        android:title="@string/settings_geolocated_title"
        android:summary="@string/settings_geolocated_summary"
        android:defaultValue="false"
        app:iconSpaceReserved="false"/>

    <io.github.muzplash.ui.settings.NumberPickerPreference
        android:key="batch_size"
        android:title="@string/settings_batch_size_title"
        android:summary="@string/settings_batch_size_summary"
        app:minValue="1"
        app:maxValue="6"
        app:iconSpaceReserved="false"/>

</androidx.preference.PreferenceScreen>